Made the application production ready
