# app/WebPage/Controllers/MetaAnalyzerController.php
@@ -2,6 +2,8 @@
 
 namespace App\WebPage\Controllers;
 
+use App\WebPage\Mappers\MetaAnalyzerRequestBuilder;
+use App\WebPage\Services\WebpageService;
 use Illuminate\Http\Request;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Contracts\View\View;
@@ -10,7 +12,7 @@ use Illuminate\Contracts\View\Factory;
 use App\WebPage\Services\PreviewService;
 use App\WebPage\Services\MetaAnalyzerService;
 use Symfony\Component\HttpFoundation\Response;
-use App\WebPage\mappers\MetaAnalyzerRequestBuilder;
+use Illuminate\Contracts\Pagination\Paginator;
 
 /**
  * @OA\Info(title="Meta data analyzer API", version="0.1")
@@ -21,22 +23,25 @@ class MetaAnalyzerController extends Controller
     private MetaAnalyzerRequestBuilder $requestBuilder;
     private MetaAnalyzerService $metaAnalyzerService;
     private PreviewService $previewService;
+    private WebpageService $webpageService;
 
     public function __construct(
         MetaAnalyzerRequestBuilder $requestBuilder,
         MetaAnalyzerService $metaAnalyzerService,
-        PreviewService $previewService
+        PreviewService $previewService,
+        WebpageService $webpageService
     ) {
         $this->requestBuilder = $requestBuilder;
         $this->metaAnalyzerService = $metaAnalyzerService;
         $this->previewService = $previewService;
+        $this->webpageService = $webpageService;
     }
 
     /**
      * Analyze meta data of a webpage
      *
      * @OA\Post(
-     *  path="/MetaAnalyzer/public/api/webpage/analyze",
+     *  path="/api/webpages/analyze",
      *  tags={"Analyze Meta Data"},
      *  operationId="analyze-metadata",
      *  @OA\Response(
@@ -61,7 +66,7 @@ class MetaAnalyzerController extends Controller
      * Create preview image of a webpage
      *
      * @OA\Post(
-     *   path="/MetaAnalyzer/public/api/webpage/preview",
+     *   path="/api/webpages/preview",
      *   tags={"Create Preview Image"},
      *   operationId="preview-image",
      *   @OA\Response(
@@ -80,5 +85,73 @@ class MetaAnalyzerController extends Controller
         $webpageDto = $this->requestBuilder->toRequestDto($request);
         $imageString = $this->previewService->createPreview($webpageDto);
         return view('preview', ['image' => $imageString]);
+    }
+
+    /**
+     * Get all webpage and metadata info with pagination
+     *
+     * @OA\Get (
+     *   path="/api/webpages/paginate",
+     *   tags={"Get all webpage and metadata"},
+     *   operationId="webpage-metadata",
+     *   @OA\Parameter(
+     *     name="page",
+     *     in="query",
+     *     description="Page number",
+     *     required=true,
+     *   ),
+     *   @OA\Response(
+     *     response=400,
+     *     description="Bad Request"
+     *   )
+     * )
+     */
+    public function getAllWebpages() : Paginator
+    {
+        return $this->webpageService->getAllWebpages();
+    }
+
+    /**
+     * Update all metadata
+     *
+     * @OA\Get (
+     *   path="/api/webpages/metadata/update-all",
+     *   tags={"Update all metadata"},
+     *   operationId="update-all-metadata",
+     *   @OA\Response(
+     *     response=400,
+     *     description="Bad Request"
+     *   )
+     * )
+     */
+    public function updateAllMetadata() : JsonResponse
+    {
+        $this->metaAnalyzerService->updateAllMetadata();
+        return response()->json("All metadata updated....!", Response::HTTP_OK);
+    }
+
+    /**
+     * Display preview image by webpage id
+     *
+     * @OA\Get (
+     *   path="/api/webpages/preview/{id}",
+     *   tags={"Display preview image"},
+     *   operationId="display-preview-image",
+     *   @OA\Parameter(
+     *     name="id",
+     *     in="path",
+     *     description="Webpage id",
+     *     required=true,
+     *   ),
+     *   @OA\Response(
+     *     response=400,
+     *     description="Bad Request"
+     *   )
+     * )
+     */
+    public function getPreviewById(int $id) : Factory|View
+    {
+        $previewImage = $this->webpageService->getPreviewImage($id);
+        return view('preview', ['image' => $previewImage]);
     }
 }
