# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use Illuminate\Support\Facades\Artisan;
 use Illuminate\Support\Facades\Route;
 use App\WebPage\Controllers\MetaAnalyzerController;
 use App\WebPage\Middlewares\WebPageRequestValidatorMiddleware;
@@ -15,12 +16,34 @@ use App\WebPage\Middlewares\WebPageRequestValidatorMiddleware;
 |
 */
 
-Route::get("/test", function () {
+Route::get("/check", function () {
     return "App running...!";
 });
 
-Route::post("webpage/analyze", [MetaAnalyzerController::class, "analyzeMetaData"])
+Route::get('/clear', function () {
+    $commandExecuted = [];
+
+    Artisan::call('cache:clear');
+    $commandExecuted[] = "Cache cleared!";
+
+    Artisan::call('view:clear');
+    $commandExecuted[] = "View cleared!";
+
+    Artisan::call('config:cache');
+    $commandExecuted[] = "Config cleared!";
+
+    Artisan::call('optimize');
+    $commandExecuted[] = "Optimized!";
+
+    return $commandExecuted;
+});
+
+Route::post("webpages/analyze", [MetaAnalyzerController::class, "analyzeMetaData"])
     ->middleware(WebPageRequestValidatorMiddleware::class);
 
-Route::post("webpage/preview", [MetaAnalyzerController::class, "createPreview"])
+Route::post("webpages/preview", [MetaAnalyzerController::class, "createPreview"])
     ->middleware(WebPageRequestValidatorMiddleware::class);
+
+Route::get("webpages/paginate", [MetaAnalyzerController::class, "getAllWebpages"]);
+Route::get("webpages/metadata/update-all", [MetaAnalyzerController::class, "updateAllMetadata"]);
+Route::get("webpages/preview/{id}", [MetaAnalyzerController::class, "getPreviewById"]);
